# strawberrypy

./: .gitignore  .readthedocs.yaml  README.md  README.rst  main.py  pyproject.toml  setup.py  test.py  test_heterostructure.py  test_local.py  test_vacancies.py
.github/workflows/: build.yml
docs/: changelog.rst  conf.py  index.rst  old_readme.txt  requirements.txt  strawberrypy.example_models.rst  strawberrypy.rst  strawberrypy.utils.rst  tutorial.rst
docs/_build/doctrees/: changelog.doctree  environment.pickle  index.doctree  modules.doctree  strawberrypy.doctree  strawberrypy.example_models.doctree  strawberrypy.utils.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  changelog.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  strawberrypy.example_models.html  strawberrypy.html  strawberrypy.utils.html  tutorial.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/strawberrypy/: classes.html  finite_model.html  supercell.html  utils.html
docs/_build/html/_modules/strawberrypy/example_models/: haldane.html  kane_mele.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  strawberrypy.example_models.rst.txt  strawberrypy.utils.rst.txt  tutorial.rst.txt
docs/_build/html/_static/: alabaster.css  basic.css  custom.css
docs/_static/: custom.css
docs/_templates/: navigation.html
spinv/: classes.py  common_func.py  finite_model.py
spinv/_pythtb/: attribute.py
strawberrypy/: __init__.py  classes.py  common_functions.py  finite_model.py  heterostructures.py  package.py  supercell.py  utils.py
strawberrypy/_pythtb/: __init__.py  attribute.py  finite_systems.py  localmarkers.py  singlepoint_invariant.py  utils.py
strawberrypy/_tbmodels/: __init__.py  attribute.py  finite_systems.py  localmarkers.py  singlepoint_invariant.py  utils.py
strawberrypy/_wberri/: __init__.py  attribute.py
strawberrypy/example_models/: __init__.py  haldane.py  kane_mele.py
tests/: test_h.py  test_heterostructures.py  test_km.py  test_lcm.py  test_lcm_h.py  test_lm.py  test_localization.py  test_lscm.py  test_lz2m.py  test_obc_markers.py  test_pbclcm.py  test_vacancies.py  test_z2_markers.py
tests/check/: lcm_heterostructure.check  lcm_uniform_disorder.check  lcm_vacancies.check  loc_haldane_heterostructure.check  loc_haldane_uniform_disorder.check  loc_kanemele_heterostructure.check  loc_kanemele_uniform_disorder.check  lscm_uniform_disorder.check  lz2m_uniform_disorder.check  pbclscm_uniform_disorder.check  pbclz2m_uniform_disorder.check  positions_haldane_heterostructure.check  positions_haldane_uniform.check  positions_kanemele_heterostructure.check  positions_kanemele_uniform.check  positions_vacancies.check
