[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "strawberrypy"
authors = [{name = "Roberta Favata", email = "roberta.favata@phd.units.it"},
            {name = "Nicolas Baù", email = "nicolas.bau@phd.units.it"},
            {name = "Antimo Marrazzo"}]
dynamic = ["version", "description"]

keywords = ["physics", "topology", "single-point invariants", "local topological markers", "wannier90", "tight-binding"]
packages = [{ include = "strawberrypy", from = "." }]

readme = "README.rst"
license = {file = "LICENSE.txt"}

dependencies = [
    'wannierberri[all]==0.15.0',
    'pythtb==1.8.0',
    'tbmodels==1.4.3',
    'opt-einsum==3.3.0',
]

repository = "https://github.com/strawberrypy-developers/strawberrypy.git"

[tool.poetry.dependencies]
python = ">=3.8"
wannierberri[all] = "^0.15.0"
pythtb = "^1.8.0"
tbmodels = "^1.4.3",
opt-einsum = "^3.3.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.1.2"       
sphinx-copybutton = "^0.5.2"       
sphinxawesome-theme = "^5.0.1"