[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "strawberrypy"
authors = [{name = "Roberta Favata", email = "roberta.favata@phd.units.it"},
            {name = "Nicolas Baù", email = "nicolas.bau@phd.units.it"},
            {name = "Antimo Marrazzo"}]

version = "0.3.0"

description = "Python package for calculation of topological invariants through single-point formulas and local markers"
keywords = ["physics", "topology", "single-point invariants", "local topological markers", "wannier90", "tight-binding"]

readme = "README.rst"
license = "MIT License"

requires-python = ">= 3.8"
dependencies = [
    'wannierberri[all]==0.15.0',
    'pythtb==1.8.0',
    'tbmodels==1.4.3',
    'opt-einsum==3.3.0'
]

[project.urls]
Repository = "https://github.com/strawberrypy-developers/strawberrypy.git"

[tool.flit.metadata]
classifiers = ["Programming Language :: Python :: 3.8"]